src/test/deca/context/valid/Obj/decl-class-methode.deca
// Description:
//    Déclaration d'une classe sans champ avec méthodes
//
// Résultat:
//    Succès
//
class A {
    void methode(){}

    int methode2(){
        return 5;
    }
}
{}